[gd_scene load_steps=2 format=3 uid="uid://cev5r3hpubwl7"]

[ext_resource type="Script" uid="uid://6nbolmhnw5v6" path="res://interactions/interaction_area.gd" id="1_dslt7"]

[node name="interaction_area" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_dslt7")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
